2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version 

	* === Released 2.18.1 ===

	* NEWS: Updates

2008-09-16  Tor Lillqvist  <tml@novell.com>

	* glib/gtimer.c (g_time_val_to_iso8601): time_t is 64 bits in all
	the newer Microsoft C libraries, not just 64-bit ones. So to avoid
	crash if compiled with newer MSVSes, use a separate time_t
	variable in all cases on Windows.

	* glib/gbacktrace.h: Define G_BREAKPOINT() also for 64-bit MSVC,
	using the __debugbreak() intrinsic.

2008-09-15  Behdad Esfahbod  <behdad@gnome.org>

	* configure.in: Fix description of module shared library suffix.

2008-09-15  Tor Lillqvist  <tml@novell.com>

	* config.h.win32.in: Update to match what the configure script
	produces. Just for uniformity, only commented out parts affected.

2008-09-13  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.h
	* glib/gwin32.h: Deprecate G_WIN32_DLLMAIN_FOR_DLL_NAME(),
	g_win32_get_package_installation_directory() and
	g_win32_get_package_installation_subdirectory() as their
	documentation has warned for a while. Sorry that I forgot to do
	this before 2.18.0.

	* glib/gwin32.c (g_win32_get_package_installation_directory):
	Print a warning if a non-NULL package parameter is passed to this
	function, as that is deprecated usage, as the documentation says.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 548321 – <string.h> is not included in gi18n-lib.h

	* glib/gi18n.h:
	* glib/gi18n-lib.h: Include string.h, since strlen is used in 
	the macros. Pointed out by Ignacio Casal Quinteiro

2008-09-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 551731 – g_date_set_time[_t] docs should mention what timezone

	* glib/gdate.c (g_date_set_time, g_date_set_time_t): Documentation
	improvements proposed by Owen Taylor.

2008-09-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 551410 – gtestutils.c: using printf without prototype

	* glib/gtestutils.c: Include stdio.h. Pointed out by Kazuki Iwamoto.
